Hal finish register user controller
